--- a/index.html
+++ b/index.html
@@ -2,74 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Title Here</title>
+  <title>Planetary Fact Sheet</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Planetary Fact Sheet</h1>
+  <h1 id="main-title">Planetary Fact Sheet</h1>
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Earth</th>
+      <th>Mars</th>
+      <th>Saturn</th>
+      <th>Neptune</th>
     </tr>
     <tr>
-      <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td class="data-fields">Image of</td>
+      <td><img src="images/planet_1.png" alt="Earth"></td>
+      <td><img src="images/planet_2.png" alt="Mars"></td>
+      <td><img src="images/planet_3.png" alt="Saturn"></td>
+      <td><img src="images/planet_4.png" alt="Neptune"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Mass</td>
+      <td>5.97 kg</td>
+      <td>0.642 kg</td>
+      <td>568 kg</td>
+      <td>102 kg</td>
     </tr>
     <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Diameter</td>
+      <td>12,756 km</td>
+      <td>6792 km</td>
+      <td>120,536 km</td>
+      <td>49,528 km</td>
     </tr>
     <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Density</td>
+      <td>5514 kg</td>
+      <td>3934 kg</td>
+      <td>687 kg</td>
+      <td>1638 kg</td>
     </tr>
     <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Gravity</td>
+      <td>9.8 m/s</td>
+      <td>3.7 m/s</td>
+      <td>9.0 m/s</td>
+      <td>11.0 m/s</td>
     </tr>
     <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Distance from Sun</td>
+      <td>149.6 km</td>
+      <td>228.0 km</td>
+      <td>1432.0 km</td>
+      <td>4515.0 km</td>
     </tr>
     <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Number of Moons</td>
+      <td>1</td>
+      <td>2</td>
+      <td>274</td>
+      <td>16</td>
     </tr>
     <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td class="data-fields">Has Ring System</td>
+      <td>No</td>
+      <td>No</td>
+      <td>Yes</td>
+      <td>Yes</td>
     </tr>
   </table>
+  <footer id="footer">
+    <p>Data retrieved from <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/">NASA Planetary Fact Sheet</a>.</p>
+  </footer>
 </body>
