--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1 id="main-title">Planetary Fact Sheet</h1>
+  <p id="description">A short comparison of characteristics between planets.</p>
   <table id="planets">
     <tr>
       <th></th>
@@ -20,10 +21,10 @@
     </tr>
     <tr>
       <td class="data-fields">Image of</td>
-      <td><img src="images/planet_1.png" alt="Earth"></td>
-      <td><img src="images/planet_2.png" alt="Mars"></td>
-      <td><img src="images/planet_3.png" alt="Saturn"></td>
-      <td><img src="images/planet_4.png" alt="Neptune"></td>
+      <td class="pictures"><img src="images/earth.png" alt="Earth"></td>
+      <td class="pictures"><img src="images/mars.png" alt="Mars"></td>
+      <td class="pictures"><img src="images/saturn.png" alt="Saturn"></td>
+      <td class="pictures"><img src="images/neptune.png" alt="Neptune"></td>
     </tr>
     <tr>
       <td class="data-fields">Mass</td>
